--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -1,15 +1,15 @@
 <! DOCTYPE html>
 <html lang="fr">
-<tête>
+<head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible » content="IE=edge">
    <meta name="viewport » content="width=device-width, initial-scale=1.0">
    <titre>Ohmyfood-La Palette du gout</titre>
    <script src="https://kit.fontawesome.com/ac33e92e0d.js » crossorigin="anonymous"></script>
    <link rel="stylesheet » href="menu1.css">
-</tête>
-<corps> 
-    <en-tête>
+</head>
+<body> 
+    <header>
         <div class="en-tête" >
             <div class="retour"></div>
                 <a href ="index.html">
@@ -19,8 +19,8 @@
             <div class="logo">
                 <div class="logo"><img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood"></div>
             </div>                  
-    </en-tête>
-    <principal>
+    </header>
+    <main>
     <div class="img">
         <div class="cartes-img">
             <img src="img/Restaurants/La palette du gout.jpg"alt="La palette du gout"></div>               
@@ -243,6 +243,7 @@
         </div>
         </un>
         </div>
-        </pied de page>
-</corps>
+    </footer>
+</main>
+    </body>
 </html>
