--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <header>
-        <div class="en-tête" >
+        <div class="header" >
             <div class="retour"></div>
                 <a href ="index.html">
                     <i class="fas fa-arrow-left"></i>
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="validation>
+                            <div class="validation">
                                 <i class="fas fa-check-circle rotation"></i>
                             </div>           
                         </div>
@@ -209,7 +209,7 @@
                         </div>
                     </section>
                 </article> 
-                <div class="commandant">
+                <div class="commander">
                 <div class="commander-entrée"> 
                     <a href="#"><p>Commander</p></a>
                 </div>
