--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -6,7 +6,7 @@
    <meta name="viewport » content="width=device-width, initial-scale=1.0">
    <titre>Ohmyfood-La Palette du gout</titre>
    <script src="https://kit.fontawesome.com/ac33e92e0d.js » crossorigin="anonymous"></script>
-   <link rel="stylesheet » href="menu1.css">
+   <link rel="stylesheet" href="menu1.css">
 </head>
 <body> 
     <header>
