--- a/menu1-la-palette-du-gout.html
+++ b/menu1-la-palette-du-gout.html
@@ -4,9 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible » content="IE=edge">
    <meta name="viewport » content="width=device-width, initial-scale=1.0">
-   <titre>Ohmyfood-La Palette du gout</titre>
+   <title>Ohmyfood-La Palette du gout</title>
    <script src="https://kit.fontawesome.com/ac33e92e0d.js » crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="menu1.css">
+   <link rel="stylesheet" href="css/menu1.css">
 </head>
 <body> 
     <header>
